syntax = "proto3";

package proto;  // 声明所在包

option go_package = "./;proto";

import "interfaces/proto/common.proto";

service Comment {
  rpc GetComments (GetCommentsReq) returns (Response) {}
  rpc GetCountByArticleId (OnlyArticleIdReq) returns (Response) {}
  rpc AddComment (AddCommentReq) returns (Response) {}
}

message GetCommentsReq {
  int64 article_id = 1;
  int64 id = 2;
}

message OnlyArticleIdReq {
  int64 article_id = 1;
}

message AddCommentReq {
  int64 article_id = 1;
  int64 pid = 2;
  string name = 3;
  string email = 4;
  string url = 5;
  string content = 6;
}
